Add more example

--- a/src/main/resources/public/register.from.component.html
+++ b/src/main/resources/public/register.from.component.html
@@ -1,7 +1,8 @@
 <div>
     <form on-submit="submit">
-        <input value="{{name}}">
+        <lable>First name :</lable><input value="{{registrar.firstName}}">
+        <lable>Last name :</lable><input value="{{registrar.lastName}}">
         <button type="submit">Save</button>
     </form>
-    <p>Your name is {{name}}</p>
+    <p>Your name is {{registrar.firstName}} {{registrar.lastName}}</p>
 </div>
