--- a/src/main/resources/public/register.from.component.html
+++ b/src/main/resources/public/register.from.component.html
@@ -1,11 +1,11 @@
-<!--<link href="/majoingun/fonts/css" rel="stylesheet" type="text/css">-->
-<!--<link href="/majoingun/fonts/icon" rel="stylesheet">-->
-<!--<link rel="stylesheet" href="/majoingun/css/material.min.css">-->
-<!--<link rel="stylesheet" href="/majoingun/css/styles.css">-->
-<!--<link rel="stylesheet" href="/majoingun/css/majoingun.css">-->
+<link href="/majoingun/fonts/css" rel="stylesheet" type="text/css">
+<link href="/majoingun/fonts/icon" rel="stylesheet">
+<link rel="stylesheet" href="/majoingun/css/material.min.css">
+<link rel="stylesheet" href="/majoingun/css/styles.css">
+<link rel="stylesheet" href="/majoingun/css/majoingun.css">
 
-<!--<script src="/majoingun/js/material.min.js"></script>-->
-<!--<link rel="ractive" href='register.html'>-->
+<script src="/majoingun/js/material.min.js"></script>
+
 <div class="mdl-layout__container has-scrolling-header">
     <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100 is-upgraded" data-upgraded=",MaterialLayout">
         <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
