Move template to register.html

--- a/src/main/resources/public/register.from.component.html
+++ b/src/main/resources/public/register.from.component.html
@@ -1,10 +1,6 @@
-<link href="/majoingun/fonts/css" rel="stylesheet" type="text/css">
-<link href="/majoingun/fonts/icon" rel="stylesheet">
-<link rel="stylesheet" href="/majoingun/css/material.min.css">
-<link rel="stylesheet" href="/majoingun/css/styles.css">
-<link rel="stylesheet" href="/majoingun/css/majoingun.css">
 
-<script src="/majoingun/js/material.min.js"></script>
+
+<!--<script src="/majoingun/js/material.min.js"></script>-->
 
 <div class="mdl-layout__container has-scrolling-header">
     <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100 is-upgraded" data-upgraded=",MaterialLayout">
