--- a/src/main/resources/static/css/majoingun.css
+++ b/src/main/resources/static/css/majoingun.css
@@ -62,6 +62,11 @@
     font-size: 13px;
 }
 
+.snippet-demo {
+    padding: 0 10px 40px;
+    display: initial;
+}
+
 /*.mdl-color-text--grey-500 {*/
 /*!*width: inherit;*!*/
 /*text-align: -webkit-center;*/
@@ -80,6 +85,7 @@
 
 .mdl-textfield {
     width: 500px;
+    display: -webkit-box;
 }
 
 .mdl-radio.is-upgraded {
