Put required field text

--- a/src/main/resources/static/css/majoingun.css
+++ b/src/main/resources/static/css/majoingun.css
@@ -28,7 +28,7 @@ html, body {
     height: 100%;
     bottom: 0px;
     top: 0px;
-    background: url(../images/pic0.jpg) no-repeat;
+    background: url(../images/pic0.jpg) no-repeat top left fixed;
     background-size:cover;
 }
 .overlay-bg {
@@ -323,6 +323,15 @@ html, body {
 
 .cell-for-checkbox-group {
     margin-top: 15px !important;
+}
+.sub-title {
+    font-style: italic;
+    padding: 0px;
+    margin: 0px;
+    margin-top: 20px;
+    margin-left: 10px;
+    color: #808080;
+    font-size: 12px;
 }
 
 /* for phone */
